src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Invoice_Recipients__c</fullName>
        <inlineHelpText>Defaults from the Account. A list of email addresses to include in CC on each Invoice that is sent out.</inlineHelpText>
        <label>Additional Invoice Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact you selected is not associated with the Account that is selected on this Agreement.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <infoMessage>These results have been filtered to show only Contacts for the Account selected on this Agreement.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Invoice_Email_Template__c</fullName>
        <label>Custom Invoice Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Branding__c</fullName>
        <label>Invoice Branding</label>
        <picklist>
            <picklistValues>
                <fullName>10K Advisors</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Trekbin</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoicing_Notes__c</fullName>
        <label>Invoicing Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Rates__c</fullName>
        <label>Number of Rates</label>
        <summaryForeignKey>Rate__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Opportunity you selected is not associated with the Account that is selected on this Agreement.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <infoMessage>These results have been filtered to show only Opportunities for the Account selected on this Agreement.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retainer_Overage_Behavior__c</fullName>
        <label>Retainer Overage Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>No Extra Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Materials</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <globalPicklist>Account_Tier</globalPicklist>
        <label>Tier</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Through__c</fullName>
        <label>Valid Through</label>
        <type>Date</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All_Active_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Valid_Through__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Agreements</label>
    </listViews>
    <listViews>
        <fullName>All_Delivery_Expert_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Valid_Through__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.Delivery_Partnership</value>
        </filters>
        <label>All Delivery Expert Agreements</label>
    </listViews>
    <listViews>
        <fullName>All_Expired_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Valid_Through__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>All Expired Agreements</label>
    </listViews>
    <listViews>
        <fullName>All_Retainers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Rate_Structure__c</columns>
        <columns>Retainer_Overage_Behavior__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Valid_Through__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.Retainer</value>
        </filters>
        <label>All Retainers</label>
    </listViews>
    <listViews>
        <fullName>Appirio_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Billing_Contact__c</columns>
        <columns>Additional_Invoice_Recipients__c</columns>
        <columns>Payment_Terms__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Appirio</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agreement__c.Time_Materials_SOW</value>
        </filters>
        <label>Appirio Agreements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expired_Agreements</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Valid_Through__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired Agreements</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>Delivery_Partnership</fullName>
        <active>true</active>
        <description>A Delivery Partnership outlines the T&amp;M rates we have agreed to pay to our Delivery Experts</description>
        <label>Delivery Partnership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fixed_Fee_SOW</fullName>
        <active>true</active>
        <description>A Fixed Fee agreement is one where we&apos;ve agreed to deliver a certain set of deliverables / functions at a set, predetermined price.</description>
        <label>Fixed Fee SOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSA</fullName>
        <active>true</active>
        <description>An MSA outlines the terms and hourly rates at which we work with a particular client, but does not define any particular scope of work.</description>
        <label>MSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retainer</fullName>
        <active>true</active>
        <description>A Retainer contract defines a time-bound agreement with a client in which they contract for one or more Named Resources, or some amount of Retained Capacity. Can also include Time &amp; Materials rates / work.</description>
        <label>Retainer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Materials_SOW</fullName>
        <active>true</active>
        <description>A Time &amp; Materials agreement defines a specific scope of functionality we&apos;ve agreed to build, charged to the customer on a Time &amp; Materials basis.</description>
        <label>Time &amp; Materials SOW</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_RateStructure_Change_If_Rates_Present</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  Number_of_Rates__c &gt; 0,
  ISCHANGED(Rate_Structure__c)
)</errorConditionFormula>
        <errorMessage>You cannot change the Rate Structure after Rates have been added to an Agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Through_Must_Be_GT_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Valid_Through__c &lt;= Effective_Date__c</errorConditionFormula>
        <errorMessage>The Valid Through date must be greater than the Effective Date</errorMessage>
    </validationRules>
</CustomObject>